[project]
name = "rabbitdb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.4",
    "piccolo-admin>=1.9.0",
    "piccolo[postgres]>=1.22.0",
    "pydantic-settings>=2.6.1",
    "uvicorn>=0.32.0",
]

[dependency-groups]
dev = [
    "ruff>=0.7.3",
]
